# olsaat

backend/: .env_example  README.md  index.js  package-lock.json  package.json
backend/controllers/: addListingController.js  deleteListingController.js  listingController.js  orderController.js
backend/middleware/: authMiddleware.js
backend/models/: product.js
backend/routes/: addListing.js  deleteListing.js  listing.js
django-backend/: db.sqlite3  env-example  manage.py  pyproject.toml  requirements.txt
django-backend/config/: asgi.py  urls.py  wsgi.py
django-backend/config/settings/: base.py  dev.py  prod.py
django-backend/frontend/: package.json  vite.config.js
django-backend/frontend/src/: App.jsx  index.css
django-backend/frontend/src/Components/: AvisClients.jsx  BienvenueMobile.jsx  ClientCard.jsx  LandingProductCard.jsx  ProductsSlideMobile.jsx  UserInfoForm.jsx  YourSelection.jsx  title.jsx
django-backend/frontend/src/pages/: HomePage.jsx
django-backend/olsaat/products/: api.py  apps.py  models.py
django-backend/olsaat/products/migrations/: 0001_initial.py  0002_alter_product_options.py
django-backend/olsaat/products/templates/products/emails/: order_confirmation.html
django-backend/olsaat/static/: manifest.json
django-backend/olsaat/static/assets/: app-BTY7LTHL.js  app-DNPomEvL.js
django-backend/olsaat/templates/: index.html
django-backend/static/: manifest.json
django-backend/static/assets/: app-C1txM0TD.css
frontend/: .env.production  index.html  package-lock.json  tailwind.config.js
frontend/src/: App.css  App.jsx
(+13 files in other folders)
